# py-odoo-cli

./: .env.example  .gitignore  ODOO_STUDIO_POLICY.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: test.yml
errors/: contributions.txt
hotel-trip-agency/: TIMEZONE_BUG_FIX.md  TIMEZONE_SETUP.md  debug_planning.py  setup_timezone.py
knowledge/: README.md
knowledge/_template/: README.md  script_template.py
knowledge/cmline-eirl-inventory/: README.md  debug_customer.py  delete_jessica_huaman.py
knowledge/docs/batches-and-serial-numbers/: WEB_RESOURCE_ODOO_EXPIRATION_DATES.md  WEB_RESOURCE_ODOO_LOTS.md  WEB_RESOURCE_ODOO_LOTS_VS_SERIAL_NUMBERS.md  WEB_RESOURCE_ODOO_REASSIGN.md  WEB_RESOURCE_ODOO_SERIAL_NUMBERS.md
knowledge/hotel-trip-agency/: debug_planning.py  setup_timezone.py
odoo_cli/: __init__.py  client.py  config.py  exceptions.py
tests/: test_client.py  test_config.py
