[project]
name = "py-odoo-cli"
version = "0.1.0"
description = "Cliente Python CLI para Odoo vía XML-RPC. Ejecuta comandos y scripts sin interfaz visual. Dockerizado y optimizado para flujo de trabajo con IA."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "typer>=0.21.1",
]

[project.scripts]
odoo-cli = "main:main"
